--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <h3>How do i install this?</h3>
     <h4>You must first:</h4>
-    <li>Install <a href="https://python.org/" target="_blank">Python</a></li><br>
+    <li>Install <a href="https://python.org/" target="_blank">Python</a> if you haven't yet</li><br>
     <li>Install the zip file at the bottom of the page</li><br>
     <li>Unzip the zip file and open it in your code editor</li><br>
     <li>run <strong>pip install rich</strong> in your editor's terminal</li><br>
